# cmake-tutorial

./: .gitignore  CMakeLists.txt  main.cpp
src/: CMakeLists.txt  etx2Sql.cpp  etx2Sql.h  queryTranslate.cpp  queryTranslate.h  sqr.cpp  sqr.h  token.h  tokenType.h
test/: CMakeLists.txt  queryTranslateTest.cpp  test.cpp  tokenTest.cpp
